--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <ul class="popular__list">
           <li class="popular__item">
             <h3 class="popular__subtitle">Rado</h3>
-            <p class="popular__price">65 300 &#8381;</p>
+            <p class="popular__price">65 300 &#8381;</a></p>
             <img class="popular__img" src="img/watch_1.png" width="313" alt="Часы Rado">
             <a class="popular__link" href="">Подробнее</a>
           </li>
