--- a/card.html
+++ b/card.html
@@ -52,7 +52,7 @@
     <div class="container">
       <ul class="breadcrumbs">
         <li class="breadcrumbs__item"><a class="breadcrumbs__link" href="index.html">Главная</a></li>
-        <li class="breadcrumbs__item"><a href="men_watches.html" class="breadcrumbs__link">Каталог</a></li>
+        <li class="breadcrumbs__item"><a href="men_watch.html" class="breadcrumbs__link">Каталог</a></li>
         <li class="breadcrumbs__item"><a href="" class="breadcrumbs__link">Мужские часы</a></li>
         <li class="breadcrumbs__item"><a href="" class="breadcrumbs__link breadcrumbs__link-active">Georg Jensen</a></li>
       </ul>
