--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           <div class="promo-text-col">
             <h2 class="promo-title"><span>Весна/Лето 2019</span> Коллекция</h2>
             <p class="promo-text">Швейцарские часы в наличии в Москве и с доставкой по всему миру</p>
-            <a class="btn btn-grey" href="">Смотреть каталог</a>
+            <a class="btn btn-grey" href="/men_watch.html">Смотреть каталог</a>
           </div>
           <div class="promo-img-col">
             <p class="promo-price promo-img-text">22 000 &#8381;</p>
@@ -50,7 +50,7 @@
       <div class="container">
         <header class="popular__header">
           <h2 class="popular__title">Популярные модели</h2>
-          <a href="" class="show-more">Смотреть все</a>
+          <a href="/men_watch.html" class="show-more">Смотреть все</a>
         </header>
         <ul class="popular__list">
           <li class="popular__item">
@@ -89,7 +89,7 @@
           <div class="banner-text-col">
             <h2>Подлинное качество</h2>
             <p>Все часы производятся в Швейцарии и имеют сертификаты качества. Настоящие швейцарские часы — это предмет гордости и престижа.</p>
-            <a class="btn btn-orange" href="">Смотреть каталог</a>
+            <a class="btn btn-orange" href="/men_watch.html">Смотреть каталог</a>
           </div>
         </div>
       </div>
