--- a/стоимость/index.html
+++ b/стоимость/index.html
@@ -1,99 +1,25 @@
-<!DOCTYPE html><html>
-    <head>
-    <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet" />
-    <link href="./css/main.css" rel="stylesheet" />
-    <title>Document</title>
-</head><body>
-    <div class="v0_311"><div class="v0_312"><span class="v0_313">Материал</span>
-        <div class="v0_314"><div class="v0_315"></div>
-        <div class="v0_316"></div>
-    </div>
-</div>
-<div class="v0_317">
-    <span class="v0_318">цвет</span><div class="v0_319">
-        <div class="v0_320">
 
-        </div>
-        <div class="v0_321"></div>
-    </div>
-</div>
-<div class="v0_322">
-    <div class="v0_323"></div>
-    <span class="v0_324">сбросить фильтр</span>
-</div>
-    <div class="v0_325">
-        <span class="v0_326">механизм</span>
-        <div class="v0_327"><div class="v0_328"></div>
-        <div class="v0_329"></div>
-    </div>
-</div>
-<div class="v0_330"><div class="v0_331">
-    <span class="v0_332">Techne</span><div class="v0_333"></div>
-    <div class="v0_334"></div>
-</div>
-<div class="v0_335"><span class="v0_336">Rado</span>
-        <div class="v0_337"></div>
-        <div class="v0_338"></div>
-    </div>
-    <div class="v0_339">
-        <span class="v0_340">Bvlgari</span>
-        <div class="v0_341"></div>
-        <div class="v0_342"></div>
-    </div>
-    <div class="v0_343">
-        <span class="v0_344">Tissot</span>
-        <div class="v0_345"></div>
-    </div>
-    <div class="v0_346"><span class="v0_347">Omega</span>
-        <div class="v0_348">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
+<link rel="stylesheet" href="./style.css">
 
-        </div>
-    </div>
-    <div class="v0_349">
-        <span class="v0_350">Montblanc</span>
-        <div class="v0_351"></div>
-    </div>
-    <div class="v0_352">
+</head>
+<body>
+<!-- partial:index.partial.html -->
+<main>
+  <form oninput="output.value = Math.round(range.valueAsNumber / 1000)">
 
+    <div class="range">
+      <input name="range" type="range" min="0" max="100000">
+      <div class="range-output">
+        <output class="output" name="output" for="range">
+          50
+        </output>
+      </div>
     </div>
-    <span class="v0_353">бренд</span>
-</div>
-<div class="v0_354">
-    <div class="v0_355">
-        <div class="v0_356">
+  </form>
+</main>
+<!-- partial -->
+  <script src='https://code.jquery.com/jquery-2.2.4.min.js'></script><script  src="./script.js"></script>
 
-        </div>
-        <div class="v0_357">
-
-        </div>
-    </div>
-    <span class="v0_358">90 000</span>
-    <div class="v0_359">
-        <div class="v0_360">
-
-        </div>
-        <div class="v0_361">
-
-        </div>
-    </div>
-    <span class="v0_362">12 000</span>
-    <div class="v0_363">
-
-    </div>
-    <div class="v0_364">
-
-    </div>
-    <div class="v0_365">
-
-    </div>
-    <div class="v0_366">
-
-    </div>
-    <div class="v0_367">
-
-    </div>
-    <span class="v0_368">стоимость</span>
-</div>
-</div>
 </body>
 </html>
